--- a/Book.ipynb
+++ b/Book.ipynb
@@ -34,21 +34,22 @@
     "* Section III. Motion Planning\n",
     "\n",
     "  * [Chapter 8. What is motion planning?](WhatIsMotionPlanning.ipynb) **75% complete**\n",
-    "  * [Chapter 9. Motion planning in simple geometric spaces](GeometricMotionPlanning.ipynb) **75% complete**\n",
+    "  * [Chapter 9. Motion planning in simple geometric spaces](GeometricMotionPlanning.ipynb) **85% complete**\n",
     "  * [Chapter 10. Motion planning in higher dimensions](MotionPlanningHigherDimensions.ipynb) **85% complete**\n",
     "  * [Chapter 11. Extensions to motion planning](ExtensionsToMotionPlanning.ipynb) **incomplete**\n",
     "\n",
     "* Section IV. Dynamics and Control\n",
     "\n",
-    "  * [Chapter 12. What are dynamics and control?](WhatAreDynamicsAndControl.ipynb) **needs fixing**\n",
+    "  * [Chapter 12. What are dynamics and control?](WhatAreDynamicsAndControl.ipynb) **75% complete**\n",
     "  * [Chapter 13. Robot dynamics](RobotDynamics.ipynb) **incomplete**\n",
-    "  * [Chapter 14. Stabilizing controlled systems](Control.ipynb) **needs fixing**\n",
-    "  * [Chapter 15. Control of articulated robots](RobotControl.ipynb) **needs fixing**\n",
-    "  * [Chapter 16. Optimal control](OptimalControl.ipynb) **50% complete, needs fixing**\n",
+    "  * [Chapter 14. Stabilizing controlled systems](Control.ipynb) **50% complete**\n",
+    "  * [Chapter 15. Control of articulated robots](RobotControl.ipynb) **85% complete**\n",
+    "  * [Chapter 16. Optimal control](OptimalControl.ipynb) **50% complete**\n",
     "\n",
     "* Section V. Perception **incomplete**\n",
     "\n",
     "* Section VI. Learning and Calibration **incomplete**\n",
+    "  * [Chapter 21. Calibration](Calibration.ipynb) **60% complete.**\n",
     "\n",
     "* Appendix A. Mathematical Preliminaries\n",
     "\n",
@@ -84,30 +85,44 @@
     "1. Install software for running the notebook:\n",
     "\n",
     "  * [Git](https://git-scm.com/download)\n",
-    "  * [Klamp't](https://github.com/krishauser/Klampt), its dependencies, and its Python API.\n",
     "  * Python 2.7 and [Jupyter Notebook](http://jupyter.org), or a Python distribution like Anaconda.\n",
+    "  * [Klamp't](https://github.com/krishauser/Klampt) 0.8 Python API.\n",
     "  * [Klampt-jupyter-extension](http://github.com/krishauser/Klampt-jupyter-extension) for live Klamp't windows.\n",
     "  * [jupyter_contrib_nbextensions](https://github.com/ipython-contrib/jupyter_contrib_nbextensions) for LaTeX and table of content support. \n",
     "  \n",
-    "Note that the Klamp't source is the most up-to-date way to install Klamp't. The Windows binaries may not yet be fully compatible with the Jupyter Notebook plugin, and installing from source on Windows is a massive headache.\n",
+    "On most systems (Linux, Windows, OSX), the Klamp't Python API can be installed using `pip` as follows:\n",
+    "\n",
+    "```bash\n",
+    "pip install Klampt\n",
+    "```\n",
+    "\n",
+    "(Note that the Klamp't source is the most up-to-date way to install Klamp't, and is mostly pain-free on Linux and OSX platforms. )\n",
+    "\n",
+    "To install Klampt-jupyter-extension, run\n",
+    "\n",
+    "```bash\n",
+    "git clone https://github.com/krishauser/Klampt-jupyter-extension.git\n",
+    "cd Klampt-jupyter-extension\n",
+    "sudo make jupyter\n",
+    "```\n",
     "\n",
     "2. Download the book source from Github:\n",
     "\n",
-    "```console\n",
-    "user@home> git clone https://github.com/krishauser/RoboticSystemsBook\n",
+    "```bash\n",
+    "git clone https://github.com/krishauser/RoboticSystemsBook\n",
     "```\n",
     "\n",
     "3. Run Jupyter Notebook using the console command:\n",
     "\n",
-    "```console\n",
-    "user@home> jupyter notebook\n",
+    "```bash\n",
+    "jupyter notebook\n",
     "```\n",
     "\n",
     "This will launch a web browser interface to Jupyter.\n",
     "\n",
     "4. The first time you install, please choose the `nbextension` tab from the Home screen, and enable the \"(some) LaTeX environments for Jupyter\", \"Table of Contents\", and \"Codefolding\" plugins.  This will lead to the best reading experience.\n",
     "\n",
-    "5. Open the Jupyter Notebook files in the RoboticSystemsBook folder (this page is named Book). Happy reading!\n"
+    "5. Open the Jupyter Notebook files in the `RoboticSystemsBook` folder (this page is named `Book.ipynb`). Happy reading!\n"
    ]
   },
   {
@@ -134,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
