--- a/Control.ipynb
+++ b/Control.ipynb
@@ -125,7 +125,7 @@
     "\n",
     "*************\n",
     "\n",
-    "|Normal value of $k_P$ | $k_P$ reduced by 1/3 |\n",
+    "|(a) Normal value of $k_P$ | (b) $k_P$ reduced by 1/3 |\n",
     "|-----|-----|\n",
     "| ![fig:PID_P_a](figures/control/pid_p_1storder.svg) | ![fig:PID_P_b](figures/control/pid_p_1storder2.svg) |\n",
     "\n",
@@ -185,7 +185,10 @@
     "\n",
     "*************\n",
     "\n",
-    "![fig:PID_PI_a](figures/control/pid_p_1storder_bias.svg){width=\"45%\"} ![fig:PID_PI_b](figures/control/pid_pi_1storder_bias.svg)\n",
+    "| (a) P control only | (b) PI control |\n",
+    "|-----|-----|\n",
+    "| ![fig:PID_PI_a](figures/control/pid_p_1storder_bias.svg) | ![fig:PID_PI_b](figures/control/pid_pi_1storder_bias.svg) |\n",
+    "\n",
     "\n",
     "<div class=\"figcaption\"><a name=\"fig:PID_PI\">Figure 2</a>.\n",
     "    Left: When the system exhibits bias, using only a P term leads to a\n",
@@ -208,12 +211,15 @@
     "\n",
     "*************\n",
     "\n",
-    "![fig:PID_PD_a](figures/control/pid_p.svg) ![fig:PID_PD_b](figures/control/pid_pd.svg)\n",
+    "|(a) P control only | (b) PD control |\n",
+    "|-------|------|\n",
+    "| ![fig:PID_PD_a](figures/control/pid_p.svg) | ![fig:PID_PD_b](figures/control/pid_pd.svg) |\n",
+    "\n",
     "\n",
     "<div class=\"figcaption\"><a name=\"fig:PID_PD\">Figure 3</a>.\n",
-    "    Left: Using P control leads\n",
-    "to oscillations when the system has second order dynamics, and is\n",
-    "unstable or lightly damped. Right: the D term adds a damping effect to\n",
+    "     A controlled system with second order dynamics. (a) Using P control leads\n",
+    "to oscillations, and is\n",
+    "unstable or lightly damped. (b) the D term adds a damping effect to\n",
     "reduce oscillations. Arrows indicate the magnitude of the $P$ term and\n",
     "$D$ term.\n",
     "</div>\n",
