--- a/Kinematics.ipynb
+++ b/Kinematics.ipynb
@@ -869,18 +869,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "There was an error loading data/planar2R.urdf",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0mTraceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-eb3260e78369>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mworld\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mWorldModel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mres\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mworld\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadFile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"data/planar2R.urdf\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mres\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"There was an error loading data/planar2R.urdf\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mrobot\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mworld\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrobot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;31m#modifies the current configuration of the robot\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAssertionError\u001b[0m: There was an error loading data/planar2R.urdf"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.7071067811865478, 1.7071067811865475, 0.0]\n",
+      "[0.7071067811865478, 1.7071067811865475, 0.0]\n"
      ]
     }
    ],
@@ -892,15 +889,15 @@
     "res = world.readFile(\"data/planar2R.urdf\")\n",
     "assert res, \"There was an error loading data/planar2R.urdf\"\n",
     "robot = world.robot(0)\n",
-    "#modifies the current configuration of the robot\n",
-    "robot.setConfig([0,math.pi/4,math.pi/4,0])\n",
+    "#modifies the current configuration of the robot -- the 3rd element is just the end effector frame\n",
+    "robot.setConfig([math.pi/4,math.pi/4,0])\n",
     "#returns the world coordinates of a point on link_2 whose local coordinates are [1,0,0]\n",
     "print robot.link(\"link_2\").getWorldPosition([1,0,0])\n",
     "#or, with the end effector frame added... \n",
     "#getTransform() returns a pair (R,t) giving the rotation and translation of the\n",
     "#end effector frame, so the R,t = ... syntax extracts the translation only\n",
-    "#R,t = robot.link(\"end_effector\").getTransform()\n",
-    "#print t"
+    "R,t = robot.link(\"end_effector\").getTransform()\n",
+    "print t"
    ]
   },
   {
