--- a/OptimalControl.ipynb
+++ b/OptimalControl.ipynb
@@ -156,9 +156,8 @@
     "for solving the Riccati equation for $P$. This method is known as the\n",
     "Linear Quadratic Regulator (LQR) approach.\n",
     "\n",
-    "As we showed in\n",
-    "Section [\\[sec:LTIStability\\]](#sec:LTIStability){reference-type=\"ref\"\n",
-    "reference=\"sec:LTIStability\"}, traditional pole placement methods can be\n",
+    "As we showed in the [section on LTI stability](Control.ipynb#Stability-in-Linear-Time-Invariant-Systems),\n",
+    "traditional pole placement methods can be\n",
     "used to derive a stable controller for LTI systems. However, the\n",
     "significance of the LQR controller compared to traditional pole\n",
     "stability analysis is that the performance metric is made explicit\n",
@@ -174,8 +173,7 @@
     "principle of optimal controllers called the *Pointryagin's minimum\n",
     "principle*. It defines a *first order*, *necessary* condition for a\n",
     "particular state/control trajectory to be an optimum. It is derived from\n",
-    "[\\[eq:OptimalControl\\]](#eq:OptimalControl){reference-type=\"eqref\"\n",
-    "reference=\"eq:OptimalControl\"} via a combination of calculus of\n",
+    "($\\ref{eq:OptimalControl}$) via a combination of calculus of\n",
     "variations and the method of Lagrange multipliers. This will briefly be\n",
     "described here.\n",
     "\n",
@@ -242,7 +240,7 @@
     "Since the equation must hold for all $x$, the matrices must also be\n",
     "equal, which produces the Riccati equations.\n",
     "\n",
-    "### Bang-bang control {#sec:BangBangControl}\n",
+    "### Bang-bang control\n",
     "\n",
     "Another result from Pointryagin's minimum principle condition (1) is\n",
     "that the Hamiltonian must be minimized by the control, keeping the state\n",
@@ -258,14 +256,13 @@
     "maximize/minimize angular acceleration; otherwise, time could be saved\n",
     "by making the control more extreme.\n",
     "\n",
-    "\\margindef{Switching times}\n",
     "If it can be determined that there are a finite number of possible\n",
     "controls satisfying condition (1), then the optimal control problem\n",
     "becomes one of simply finding *switching times* between optimal\n",
     "controls.\n",
     "\n",
-    "[\\[sec:DubinsCar\\]]{#sec:DubinsCar label=\"sec:DubinsCar\"} As an example,\n",
-    "the Dubins car is a car-like dynamic system on the state variable\n",
+    "Taking the [Dubins car model](WhatAreDynamicsAndControl.ipynb#Dubins-car) as an example, \n",
+    "we have the state variable\n",
     "$(x,y,\\theta)\\in SO(2)$ and control variable $(v,\\phi)$ denoting\n",
     "velocity and steering angle: $$\\begin{split}\n",
     "\\dot{x} &= v \\cos \\theta \\\\\n",
@@ -318,8 +315,7 @@
     "In any case, the general method for performing trajectory optimization\n",
     "includes 1) defining a set of basis functions for the control\n",
     "trajectory, 2) defining a state evolution technique, 3) reformulating\n",
-    "[\\[eq:OptimalControl\\]](#eq:OptimalControl){reference-type=\"eqref\"\n",
-    "reference=\"eq:OptimalControl\"} as a finite-dimensional optimization\n",
+    "($\\ref{eq:OptimalControl}$) as a finite-dimensional optimization\n",
     "problem over the coefficients of the basis functions, and 4) optimizing\n",
     "using some gradient-based technique.\n",
     "\n",
@@ -377,8 +373,7 @@
     "### Descent approaches\n",
     "\n",
     "Standard gradient-based techniques can be used to solve the problem\n",
-    "[\\[eq:DDPProblem\\]](#eq:DDPProblem){reference-type=\"eqref\"\n",
-    "reference=\"eq:DDPProblem\"}. One difficulty is that to take the gradient\n",
+    "($\\ref{eq:DDPProblem}$). One difficulty is that to take the gradient\n",
     "of $\\tilde{J}$ with respect to a control variable $u_i$, observe that\n",
     "this choice of control affects *every* state variable $x_k$ with\n",
     "$i \\leq k \\leq N$. Hence,\n",
@@ -398,8 +393,7 @@
     "And in general, for $k > i$,\n",
     "$$\\frac{\\partial x_k}{\\partial u_i} = \\frac{\\partial g}{\\partial x}(x_{k-1},u_k,\\Delta t) \\frac{\\partial x_{k-1}}{\\partial u_i}.$$\n",
     "This appears to be extremely computationally expensive, since each\n",
-    "evaluation of [\\[eq:JacobianUi\\]](#eq:JacobianUi){reference-type=\"eqref\"\n",
-    "reference=\"eq:JacobianUi\"} requires calculating $O(N)$ derivatives,\n",
+    "evaluation of ($\\ref{eq:JacobianUi}$) requires calculating $O(N)$ derivatives,\n",
     "leading to an overall $O(N^2)$ algorithm for calculating the gradient\n",
     "with respect to the entire control sequence. However, with a clever\n",
     "forward/backward formulation, the gradient can be calculated with $O(N)$\n",
@@ -409,8 +403,7 @@
     "$\\frac{\\partial x_k}{\\partial u_i}$ are equivalent to\n",
     "$\\frac{\\partial x_k}{\\partial x_i}\\frac{\\partial x_i}{\\partial u_i}$.\n",
     "So, we observe that\n",
-    "[\\[eq:JacobianUi\\]](#eq:JacobianUi){reference-type=\"eqref\"\n",
-    "reference=\"eq:JacobianUi\"} is equal to\n",
+    "($\\ref{eq:JacobianUi}$) is equal to\n",
     "$$\\Delta t \\frac{\\partial L}{\\partial u_i}(x_{i-1},u_i,t) + \\frac{\\partial J}{\\partial x_i} \\frac{\\partial x_i}{\\partial u_i}.$$\n",
     "Then, we can express:\n",
     "$$\\frac{\\partial J}{\\partial x_i} = \\Delta t \\sum_{k=i}^{N-1} \\frac{\\partial L}{\\partial x}(x_k,u_{k+1},t_k) \\frac{\\partial x_k}{\\partial x_i} + \\frac{\\partial \\Phi }{\\partial x_N}\\frac{\\partial x_N}{\\partial x_i}.$$\n",
@@ -536,8 +529,7 @@
     "Note that the first order approximation of $V(x,t)$ is given by:\n",
     "$$V(x+\\Delta x,t+\\Delta t) \\approx V(x,t) + \\frac{\\partial V}{\\partial x}(x,t) \\Delta x + \\dot{V}(x,t)\\Delta t$$\n",
     "If we take the limit of\n",
-    "[\\[eq:DiscreteTimeHJB\\]](#eq:DiscreteTimeHJB){reference-type=\"eqref\"\n",
-    "reference=\"eq:DiscreteTimeHJB\"} as the time step $\\Delta t$ approaches\n",
+    "($\\ref{eq:DiscreteTimeHJB}$) as the time step $\\Delta t$ approaches\n",
     "0, subtract $V(x,t)$ from both sides, and divide by $\\Delta t$, then we\n",
     "obtain the Hamilton-Jacobi-Bellman PDE :\n",
     "$$0 = \\dot{V}(x,t) + \\min_{u \\in U} [ L(x,u,t) + \\frac{\\partial V}{\\partial x}(x,t) f(x,u)].\n",
@@ -557,9 +549,8 @@
     "calculate a function over an $n+1$ dimensional grid, which is\n",
     "prohibitively expensive for high-D state spaces. It is also potentially\n",
     "difficult to perform the minimization over the control\n",
-    "in [\\[eq:DiscreteTimeHJB\\]](#eq:DiscreteTimeHJB){reference-type=\"eqref\"\n",
-    "reference=\"eq:DiscreteTimeHJB\"}\n",
-    "and [\\[eq:HJB\\]](#eq:HJB){reference-type=\"eqref\" reference=\"eq:HJB\"},\n",
+    "in ($\\ref{eq:DiscreteTimeHJB}$)\n",
+    "and ($\\ref{eq:HJB}$),\n",
     "since it must be performed at each point in time and space.\n",
     "\n",
     "### Reducing dimension by 1 using time-independence\n",
@@ -580,16 +571,14 @@
     "\n",
     "1.  Value iteration uses a guess of $V(x)$ and then iteratively improves\n",
     "    it by optimizing\n",
-    "    [\\[eq:DiscreteHJBStationary\\]](#eq:DiscreteHJBStationary){reference-type=\"eqref\"\n",
-    "    reference=\"eq:DiscreteHJBStationary\"} on each $x$ in the grid. This\n",
+    "    ($\\ref{eq:DiscreteHJBStationary}$) on each $x$ in the grid. This\n",
     "    is also known as recursive dynamic programming.\n",
     "\n",
     "2.  Linear programming uses a set of sample points $x_1,\\ldots,x_N$ on a\n",
     "    state space grid and points $u_1,\\ldots,u_M$ on a control space\n",
     "    grid, and then sets up a large linear programming problem with\n",
     "    constraints of the form\n",
-    "    [\\[eq:DiscreteHJBStationary\\]](#eq:DiscreteHJBStationary){reference-type=\"eqref\"\n",
-    "    reference=\"eq:DiscreteHJBStationary\"}.\n",
+    "    ($\\ref{eq:DiscreteHJBStationary}$).\n",
     "\n",
     "3.  Policy iteration assigns guesses for the policy $u(x)$, and\n",
     "    iteratively alternates between a) solving for the $V(x)$ induced by\n",
@@ -669,19 +658,23 @@
     "    optimization into a closed-loop controller by means of repeated\n",
     "    replanning.\n",
     "\n",
-    "Table [\\[tab:OptControlSummary\\]](#tab:OptControlSummary){reference-type=\"ref\"\n",
-    "reference=\"tab:OptControlSummary\"} lists an overview of the approaches\n",
+    "The [following table](#tab:OptControlSummary) lists an overview of the approaches\n",
     "covered in this chapter.\n",
     "\n",
-    "  **Approach**      **Type**     **Characteristics**\n",
-    "  ----------------- ------------ -----------------------------------------------------------------------\n",
-    "  LQR               Analytical   Applies to LTI systems with quadratic costs\n",
-    "  PMP               Analytical   Defines necessary conditions for optimality\n",
-    "  Trajectory opt.   Numerical    Optimize a time-discretized control or trajectory space. Local minima\n",
-    "  HJB               Numerical    Discretize and solve over state space.\n",
-    "  MPC               Numerical    Closed-loop control by repeated optimization\n",
+    "********************************************************************\n",
     "\n",
-    "  : Summary of approaches[]{label=\"tab:OptControlSummary\"}\n",
+    "<div class=\"figcaption\"><a name=\"tab:OptControlSummary\">Summary of optimal control approaches</a></div>\n",
+    "\n",
+    "| **Approach**     | **Type**   | **Characteristics** |\n",
+    ":------------------|------------|-----------------------------------------------------------------------:\n",
+    "| LQR              |Analytical  |Applies to LTI systems with quadratic costs |\n",
+    "| PMP              |Analytical  |Defines necessary conditions for optimality |\n",
+    "| Trajectory opt.  |Numerical   |Optimize a time-discretized control or trajectory space. Local minima |\n",
+    "| HJB              |Numerical   |Discretize and solve over state space. |\n",
+    "| MPC              |Numerical   |Closed-loop control by repeated optimization |\n",
+    "\n",
+    "********************************************************************\n",
+    "\n",
     "\n",
     "Exercises\n",
     "---------\n",
@@ -693,9 +686,9 @@
     "    problem? Do the same for the task of balancing on one foot.\n",
     "\n",
     "2.  Recall the point mass double-integrator system:\n",
-    "    $$\\dot{x} \\equiv \\ColVecTwo{\\dot{p}}{\\dot{v}} = f(x,u) = \\ColVecTwo{v}{u/M}.$$\n",
+    "    $$\\dot{x} \\equiv \\begin{bmatrix}{\\dot{p}}\\\\{\\dot{v}}\\end{bmatrix} = f(x,u) = \\begin{bmatrix}{v}\\\\{u/M}\\end{bmatrix}.$$\n",
     "    Express this as an LTI system, and solve for the LQR gain matrix $K$\n",
-    "    with the cost terms $Q=\\MatTwo{10}{0}{0}{1}$ and $R=5$.\n",
+    "    with the cost terms $Q=\\begin{bmatrix}{10}&{0}\\\\{0}&{1}\\end{bmatrix}$ and $R=5$.\n",
     "\n",
     "3.  TBD\\...\n"
    ]
@@ -742,7 +735,7 @@
    "labels_anchors": false,
    "latex_user_defs": true,
    "report_style_numbering": false,
-   "user_envs_cfg": false
+   "user_envs_cfg": true
   },
   "toc": {
    "base_numbering": 1,
