--- a/RobotControl.ipynb
+++ b/RobotControl.ipynb
@@ -604,10 +604,9 @@
     "dependence of several terms on $q$: $$\\begin{split}\n",
     "\\ddot{x} &= J(B^{-1}(\\tau - C(q,\\dot{q}) - G) + \\dot{J}\\dot{q} \\\\\n",
     "&= JB^{-1} J^T f_{ext} - JB^{-1} C(q,\\dot{q}) - JB^{-1} G  + \\dot{J}\\dot{q} \n",
-    "\\end{split}$$ Recall from\n",
-    "Section [\\[sec:EffectiveInertia\\]](#sec:EffectiveInertia){reference-type=\"ref\"\n",
-    "reference=\"sec:EffectiveInertia\"} that the matrix\n",
-    "$\\tilde{B} = (JB^{-1}J^T)^{-1}$ is the effective inertia of the task\n",
+    "\\end{split}$$ \n",
+    "Recall from the [discussion on effective inertia](RobotDynamics.ipynb#Effective-inertia)\n",
+    "that the matrix $\\tilde{B} = (JB^{-1}J^T)^{-1}$ is the effective inertia of the task\n",
     "space coordinate. Multiplying both sides by $\\tilde{B}$ and rearranging,\n",
     "we get\n",
     "$$\\tilde{B}\\ddot{x} + \\tilde{B}(JB^{-1} C(q,\\dot{q}) - \\dot{J}\\dot{q}) + \\tilde{B}JB^{-1}G =  f_{ext}$$\n",
@@ -707,7 +706,7 @@
     "zero-gravity mode sets $K$ and $D$ to 0 and the robot's end effector\n",
     "behaves like a free-floating mass in response to applied forces. To\n",
     "simulate MSD behavior on a robot's end effector, equation\n",
-    "($\\ref{eq:MassSpringDamper}) can be used in conjunction with\n",
+    "($\\ref{eq:MassSpringDamper}$) can be used in conjunction with\n",
     "($\\ref{eq:ForceSensor}$) to estimate $f_{ext}$, and the resulting\n",
     "$\\ddot{x}$ should be fed into an operational space controller as\n",
     "$\\ddot{x}_cmd$.\n",
