--- a/WhatAreDynamicsAndControl.ipynb
+++ b/WhatAreDynamicsAndControl.ipynb
@@ -222,7 +222,11 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -236,6 +240,7 @@
     }
    ],
    "source": [
+    "# Code for plotting Euler integration of a 2D particle\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "import math\n",
@@ -298,7 +303,11 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -312,6 +321,7 @@
     }
    ],
    "source": [
+    "# Code for the plot using scipy ODE integration\n",
     "def integrate_scipy(f,x0,N,dt,t0=0):\n",
     "    \"\"\"Same arguments and return type as euler, but using the integrators in the Scipy library\"\"\"\n",
     "    from scipy.integrate import ode\n",
@@ -370,7 +380,11 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -384,6 +398,7 @@
     }
    ],
    "source": [
+    "# Code for integration of a damped harmonic oscillator with Euler's method\n",
     "def f_harmonic_oscillator(x,t):\n",
     "    return np.array([x[1],-10*x[0]-x[1]])\n",
     "\n",
@@ -436,7 +451,11 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -450,6 +469,7 @@
     }
    ],
    "source": [
+    "#Code for plotting the phase space of a pure oscillator\n",
     "def f_oscillator(x,t):\n",
     "    return np.array([-x[1],x[0]])\n",
     "X, Y = np.meshgrid(np.arange(-3, 3, .5), np.arange(-3, 3, .5))\n",
@@ -494,8 +514,9 @@
     "This problem can be modeled\n",
     "with a state $x = (p,v) \\in \\mathbb{R}^2$ and control\n",
     "$u = f \\in \\mathbb{R}$ with the dynamics equation\n",
-    "$$\\dot{x} \\equiv \\begin{bmatrix}\\dot{p}\\\\\\dot{v} \\end{bmatrix} = f(x,u) = \\begin{bmatrix}v \\\\ f/m \\end{bmatrix}.\n",
-    "\\label{eq:PointMass}$$ This function $f$ can be thought of as a *vector\n",
+    "$$\\dot{x} \\equiv \\begin{bmatrix}\\dot{p}\\\\ \\dot{v} \\end{bmatrix} = f(x,u) \n",
+    "= \\begin{bmatrix}v \\\\ f/m \\end{bmatrix}. \\label{eq:PointMass}$$\n",
+    "This function $f$ can be thought of as a *vector\n",
     "field* that maps each 2D point to a 2D vector. If we plot this vector\n",
     "field on the $(p,v)$ plane for various values of $f$, we observe a few\n",
     "things. First, it is invariant to $p$. Second, the value of $f$ varies\n",
@@ -713,7 +734,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Linear Time Invariant Systems\n",
+    "Linear time invariant systems\n",
     "-----------------------------\n",
     "\n",
     "\n",
@@ -759,7 +780,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Noise, Uncertainty, Disturbances, Errors\n",
+    "Noise, uncertainty, disturbances, errors\n",
     "----------------------------------------\n",
     "\n",
     "Besides handling the differential constraint of the dynamics function,\n",
@@ -799,15 +820,14 @@
     "*Partial observability* means that only certain aspects of the state\n",
     "*can possibly be measured* by the available sensors. For example, a\n",
     "mobile robot with a GPS sensor can only measure position, whereas it may\n",
-    "need to model velocity as part of its state. We shall see in\n",
-    "Chapter [\\[chapter:StateEstimation\\]](#chapter:StateEstimation){reference-type=\"ref\"\n",
-    "reference=\"chapter:StateEstimation\"} that state estimation techniques\n",
+    "need to model velocity as part of its state. State estimation techniques,\n",
+    "such as Kalman filtering and particle filtering,\n",
     "can be used to extrapolate the unobserved components of state to provide\n",
     "reasonable state estimates. With those estimates, there will be some\n",
     "remaining *localization error* that the controller will still need to\n",
     "handle.\n",
     "\n",
-    "*Modeling error*, , or *parameter uncertainty* means that the true\n",
+    "*Modeling error*, or *parameter uncertainty* means that the true\n",
     "dynamics function differs from what is *known* to the robot. This is\n",
     "sometimes considered a third class of uncertainty, but could also be\n",
     "treated as state uncertainty as we shall see below.\n",
@@ -848,11 +868,11 @@
     "disturbed from the true value by $\\epsilon_m$ such that\n",
     "$\\hat{m} = m + \\epsilon_m$. If we construct the augmented state vector\n",
     "$(p,v,m)\\in \\mathbb{R}^3$, then the state follows dynamics\n",
-    "$$\\dot{x} \\equiv \\ColVecThree{\\dot{p}}{\\dot{v}}{\\dot{m}} = f(x,u) = \\ColVecThree{v}{f/m}{0}.$$\n",
+    "$$\\dot{x} \\equiv \\begin{bmatrix}\\dot{p} \\\\ \\dot{v} \\\\ \\dot{m} \\end{bmatrix} = f(x,u) = \\begin{bmatrix} v \\\\ f/m 0 \\end{bmatrix}.$$\n",
     "Hence, the modeling error is equivalent to the state uncertainty vector\n",
-    "$$\\epsilon_x = \\ColVecThree{0}{0}{\\hat{m}-m}.$$\n",
+    "$$\\epsilon_x = \\begin{bmatrix} 0 \\\\ 0 \\\\ \\hat{m}-m \\end{bmatrix}.$$\n",
     "\n",
-    "Representing Trajectories with Timing\n",
+    "Trajectories with timing\n",
     "-------------------------------------\n",
     "\n",
     "It is important to discuss the difference between trajectories of a\n",
@@ -869,6 +889,8 @@
     "consider both time and dynamic constraints when representing valid\n",
     "trajectories.\n",
     "\n",
+    "### Trajectory representation\n",
+    "\n",
     "One basic representation is to store a trajectory as a sequence of\n",
     "states sampled along the trajectory $(x_0,\\ldots,x_n)$ along with the\n",
     "initial time $t_0$ (often assumed to be 0) and the time step $\\Delta t$\n",
@@ -878,7 +900,9 @@
     "$$x(t) = x_k + \\frac{t-t_0-k\\Delta t}{\\Delta t}(x_{k+1} - x_k)$$ defined\n",
     "over $t \\in [t_0,t_0+n\\Delta t]$, where\n",
     "$k = \\lfloor \\frac{t-t_0}{\\Delta t} \\rfloor$ is the index of the\n",
-    "trajectory segment corresponding to the time $t$. More generally, the\n",
+    "trajectory segment corresponding to the time $t$.\n",
+    "\n",
+    "More generally, the\n",
     "trajectory could store both states $(x_0,\\ldots,x_n)$ and times\n",
     "$(t_0,\\ldots,t_n)$, with a slightly modified interpolation function\n",
     "$$x(t) = x_k + \\frac{t-t_k}{t_{k+1}-t_k}(x_{k+1} - x_k)$$ defined over\n",
@@ -886,9 +910,9 @@
     "$t_k \\leq t \\leq t_{k+1}$.\n",
     "\n",
     "If we are given an *integrator* (i.e., a *simulator*) for the dynamics\n",
-    "function, this gives rise to an alternate control-space representation\n",
-    "$(x_0,u)$. Given an arbitrary control trajectory $u(t)$ and an initial\n",
-    "state $x_0$, the integrator then *generates* the state trajectory\n",
+    "function, trajectories can be encoded in a control-space representation\n",
+    "$(x_0,u)$, which captures the initial state $x_0$ and an arbitrary control trajectory $u(t)$.\n",
+    "From these items, the integrator *generates* the state trajectory\n",
     "$x(t)$. Specifically, we assume the existence of a function\n",
     "$Sim(f,x_0,u,t)$ that integrates the dynamics $f$ forward over time $t$,\n",
     "starting from $x_0$ and using the control trajectory $u$. The control\n",
@@ -897,22 +921,31 @@
     "and splines. Then, we can regenerate the state-space trajectory\n",
     "$x(t) \\equiv Sim(f,x_0,u,t)$ as needed.\n",
     "\n",
-    "It is almost trivial to convert trajectories to paths, simply by\n",
-    "constructing a state space path and dropping the time component. In the\n",
-    "case where only the control trajectory is stored, the state trajectory\n",
-    "can first be generated at a given resolution.\n",
+    "### Path to trajectory conversion\n",
     "\n",
+    "It is almost trivial to convert trajectories to paths: simply \n",
+    "construct a state space path and dropping the time component.\n",
     "The converse --- creating a timed, dynamically-feasible trajectory from\n",
-    "a path --- can in some cases be quite challenging or even impossible.\n",
-    "Piecewise linear paths, executed at a constant rate, require\n",
-    "instantaneous changes of derivative at each milestone. We will examine\n",
-    "methods for industrial robots to start and stop smoothly at milestones\n",
-    "when we discuss motion generation in\n",
-    "Sec. [\\[sec:MotionGeneration\\]](#sec:MotionGeneration){reference-type=\"ref\"\n",
-    "reference=\"sec:MotionGeneration\"}). The more general case is known as a\n",
-    "time-scaling problem and will be discussed in\n",
-    "Sec. [\\[sec:TimeScaling\\]](#sec:TimeScaling){reference-type=\"ref\"\n",
-    "reference=\"sec:TimeScaling\"}."
+    "a path --- can in some cases be quite challenging or even impossible. The reason is that the speed at which a robot should execute a path requires foresight into future twists and turns, like a race car driver slowing down ahead of a hairpin turn. \n",
+    "\n",
+    "If a piecewise linear path were to be executed at a constant rate, then the timed trajectory would instantaneously change velocity at each milestone.  But infinite forces are needed to execute instantaneous changes of velocity, so sending such trajectories to motors would lead to overshooting corners.  We will examine\n",
+    "better methods for industrial robots to start and stop smoothly at milestones\n",
+    "when we discuss [motion generation](RobotControl.ipynb#Motion-queues-(motion-generation)).  The basic idea is to speed up and slow down gradually, while choosing the point in time when the robot slows so that the robot ends exactly at the next milestone.\n",
+    "\n",
+    "The more general case is known as a *time-scaling* problem. Mathematically, we describe such a problem as being given a geometric path $p(s)$ as input, and we wish to find a timed path $x(t)$ such that:\n",
+    "\n",
+    "* The trajectory follows the path: for all $t$, there exists an $s$ such that $x(t) = p(s)$\n",
+    "* First-order dynamic constraints satisfied: $g(t,\\dot{x}(t)) \\leq 0$ for all $t$\n",
+    "* Second-order dynamic constraints satisfied: $h(t,\\dot{x}(t),\\ddot{x}(t)) \\leq 0$ for all $t$\n",
+    "* Possibly higher-order constraints as well...\n",
+    "\n",
+    "This is formulated as finding a smooth, monotonically increasing 1D function $t(s)$ that defines the timing along the path.  At one end of the domain, there is a boundary constraint $t(0)=0$.  Since $t(s)$ is monotonically increasing, it has a well-defined inverse $s(t)$, so that the trajectory is defined via $x(t) = p(s(t))$.  and we can define the trajectory velocity, acceleration, and higher order derivatives using the chain rule:\n",
+    "\n",
+    "* $\\dot{x}(t) = p^\\prime(s(t)) s^\\prime(t)$ \n",
+    "* $\\ddot{x}(t) = p^{\\prime\\prime}(s(t)) s^\\prime(t)^2 + p^\\prime(s(t)) s^{\\prime\\prime}(t)$ \n",
+    "* ...\n",
+    "\n",
+    "Then, a dynamic constraint of order $k$ can then be rewritten in terms of $p$ (which is known), $s$, and their derivatives up to order $k$. Choosing $s(t)$ then becomes a constrained trajectory optimization problem, which we will discuss when we visit the topic of [optimal control](OptimalControl.ipynb).\n"
    ]
   },
   {
@@ -920,7 +953,12 @@
    "metadata": {},
    "source": [
     "Summary\n",
-    "-------"
+    "-------\n",
+    "\n",
+    "* Continuous-time dynamic systems are represented by a dynamics equation in the canonical form $\\dot{x}(t) = f(x(t),u(t))$, where $x$ is the state trajectory and $u$ is the control trajectory.  Discrete-time systems are represented by the form $x_{t+1} = f(x_t,u_t)$.\n",
+    "* Integration (or simulation) is needed to determine the trajectory that the state will follow under a given control.  Numerical instability can result with a time step that is too large.\n",
+    "* Dynamic systems can be convergent, stable, or divergent under a given controller.\n",
+    "* "
    ]
   },
   {
@@ -955,7 +993,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -973,7 +1011,7 @@
    "labels_anchors": false,
    "latex_user_defs": true,
    "report_style_numbering": false,
-   "user_envs_cfg": false
+   "user_envs_cfg": true
   },
   "toc": {
    "base_numbering": 1,
